Fixed issue with footer on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -260,7 +260,10 @@ footer {
 
   @media only screen  and (max-width: 450px) {
     .f-container {
-        height: 70%;
+        width: 80%;
+
+    footer {
+        height: 25vh;
     }
 
     .fa {
